--- a/style.css
+++ b/style.css
@@ -74,7 +74,12 @@ header a:hover {
   margin-right: 10%;
 }
 
-#shotBio li {
+#shortBio ul {
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
+#shortBio li {
   font-size: 18px;
 }
 
@@ -92,4 +97,20 @@ header a:hover {
 .changeBlock {
   display: inline-block;
   margin-top: 5px;
+}
+
+.myImage {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 300px;
+  height: 300px;
+  overflow: hidden;
+  border-radius: 50%;
+}
+
+.myImage img {
+  height: 400px;
+  width: 300px;
+  margin-top: -30px;
 }
